fix: overflow

--- a/main.css
+++ b/main.css
@@ -10,8 +10,3 @@
 .checkbox input:checked {
     background-color: #473E9E
 }
-
-.password {
-
-    outline: none !important;
-}
